--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,28 +1,28 @@
 .sidebar {
   grid-row: 1 / span 8;
   display: grid;
-  grid-template-rows: repeat(8, 1fr);
+  grid-template-rows: repeat(12, 1fr);
   grid-template-columns: 240px;
+  background-color: transparent;
+  box-sizing: border-box;
+  box-shadow: 0px 0px 1px 0px var(--float-shade);
 }
 
 .sidebar-header{
-  background-color: #222;
   grid-column: span 1;
   grid-row: span 1;
+  box-shadow: -2px 1px 1px 0px var(--float-shade);
 }
 
 .home-link {
   position: relative;
   height: 70%;
   width: 46%;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin-top: 0.49em;
   left: 25%;
-  font-size: 1.8em;
+  font-size: 1em;
   font-weight: 900;
   letter-spacing: 0.1em;
-
-  border-bottom: 5px solid white;
   color: white;
   display: flex;
   flex-direction: column;
@@ -32,28 +32,14 @@
 
 .watch-list {
   grid-column: span 1;
-  grid-row: 2 / span 7;
+  grid-row: 2 / span 11;
   overflow: hidden;
   display: grid;
   width: 100%;
   height: 100%;
   grid-template-columns: 2fr;
   grid-auto-rows: 1fr;
-  box-shadow: 5px 20px 20px 0px var(--float-shade);
-  background-color: #222;
 }
-
-/* .watch-list {
-  grid-column: span 10;
-  overflow: hidden;
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-columns: 2fr;
-  grid-template-rows: auto auto 1fr 1fr;
-  grid-template-rows: repeat(30, 1fr);
-  box-shadow: 5px 20px 20px 0px var(--float-shade);
-} */
 
 .closed {
   display: none;
@@ -66,7 +52,7 @@
 }
 
 .list {
-  background-color: white;
+  background-color: transparent;
   padding-top: 5px;
   overflow-x: hidden;
   overflow-y: scroll;
